@@ -13,6 +13,10 @@ use base 'App::Pinto::Command';
 
 # VERSION
 
+#------------------------------------------------------------------------------
+
+sub command_names { return qw(update up) }
+
 #-----------------------------------------------------------------------------
 
 sub opt_spec {
